--- a/Yo/Views/Home/Index.cshtml
+++ b/Yo/Views/Home/Index.cshtml
@@ -15,5 +15,29 @@
     </div>
     <div class="*">
         <h1>内容</h1>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>#月</th>
+                    <th>出社時間</th>
+                    <th>退社時間</th>
+                    <th>勤務時間</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>1</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>2</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
